# tracker-bridge-materials

./: .gitignore  AGENTS.md  BLUEPRINT.md  CHANGELOG.md  CHECKLISTS.md  CLAUDE.md  EVALUATION.md  GUARDRAILS.md  LICENSE  README-human.md  README.md  README.txt  RUNBOOK.md  pyproject.toml
docs/: 0001_init_tracker_bridge.sql  0002_state_history_bundle_audit.sql  tracker-bridge-requirements.md  tracker-bridge-sqlite-spec.md
docs/birdseye/: index.json
docs/kv-priority-roadmap/: 01-typed-ref-unification.md  02-workx-state-history-and-bundle-audit.md  03-workx-memx-context-rebuild-resolver.md  04-tracker-bridge-minimum-integration.md  kv-cache-independence-amendments.md  プライオリティ.md
docs/releases/: v0.2.0.md  v1.0.0.md
orchestration/: roadmap.md
skills/tracker-bridge-materials/: SKILL.md
skills/tracker-bridge-materials/agents/: openai.yaml
skills/tracker-bridge-materials/references/: repo-map.md
tests/: __init__.py  conftest.py  test_adapters.py  test_adapters_live.py  test_context_bundle.py  test_context_rebuild.py  test_db.py  test_models.py  test_refs.py  test_repositories.py  test_resolver.py  test_resolver_integration.py  test_service_workflows.py  test_services.py  test_state_transition.py
tracker_bridge/: db.py  errors.py  models.py  refs.py
tracker_bridge/adapters/: __init__.py  base.py  github.py  jira.py
tracker_bridge/cli/: main.py
tracker_bridge/repositories/: __init__.py  connection.py  context_bundle.py  context_bundle_source.py  entity_link.py  issue_cache.py  state_transition.py  sync_event.py
tracker_bridge/resolver/: __init__.py  interface.py  memx_resolver.py  tracker_resolver.py
tracker_bridge/services/: __init__.py  connection_service.py  context_bundle_service.py  context_rebuild_service.py  issue_service.py  link_service.py  state_transition_service.py  sync_service.py  tracker_integration_service.py
